YUK-23307 Convert C++ messaging to Apache Proton Added activemq-amqp-5.16.1.jar